2004-01-10  Don Allingham  <dallingham@users.sourceforge.net>
	* configure.in: fix gnome-python-vfs error message
	* src/docgen/OpenOfficeDoc.py: proper handling of center_text
	* src/docgen/PdfDoc.py: proper handling of center_text
	* src/plugins/TimeLine.py: switch to using center_text instead of draw_text
	* src/plugins/AncestorChart2.py: switch to using center_text instead of draw_text
	
2004-01-09  Don Allingham  <dallingham@users.sourceforge.net>
	* src/docgen/OpenOfficeDoc.py: allow disabling of the box shadow

2004-01-09  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/rel_de.py: Update possible German locale list. 
	* src/const.py.in: Mark LDS status strings as translatable.
	* src/get_strings: Add coding line. Remove ^L chars.

2004-01-08  Don Allingham  <dallingham@users.sourceforge.net>
	* src/docgen/PSDrawDoc.py: Scaleable shadow
	* src/docgen/OpenOfficeDoc.py: Scaleable shadow
	* src/docgen/KwordDoc.py (KwordDoc.close): handle KWord mime type
	* src/grampslib_wrap.c: handle NULL pointers
	* src/BaseDoc.py: Scaleable shadow
	* src/plugins/AncestorChart2.py: Scale to page implemented
	* src/docgen/PdfDoc.py: Scalable shadow

2004-01-08  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/FamilyView.py (delete_family_from): Remove extra "[0]".
	* src/plugins/rel_de.py: Update.
	* src/docgen/PdfDoc.py: Set print_label to None.
	* src/docgen/KwordDoc.py: Set print_label to None.
	* src/docgen/HtmlDoc.py: Set print_label to None.
	* src/docgen/AbiWord2Doc.py: Set print_label to None.
	* src/docgen/RTFDoc.py: Set print_label to None.

2004-01-07  Egyeki Gergely  <egeri@elte.hu>
	* src/plugins/rel_hu.py: Add to CVS.
	* src/plugins/Makefile.am: Ship rel_hu.py.

2004-01-07  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/IndivComplete.py (write_note): Typo.
	* src/plugins/DetDescendantReport.py: Correct image insertion.
	* src/plugins/DetAncestralReport.py: Correct image insertion.
	* src/plugins/rel_de.py: Add to CVS.