@@ -1,3 +1,10 @@
+2004-01-11  Don Allingham  <dallingham@users.sourceforge.net>
+	* src/Makefile.am: export papersize.xml
+	* src/RelLib.py: Don't call setAncestor if default person is None
+	* src/gramps_main.py: remove children out of alternate families
+	when deleting a person, set default person to None if deleting the
+	default person.
+
 2004-01-10  Don Allingham  <dallingham@users.sourceforge.net>
 	* configure.in: fix gnome-python-vfs error message
 	* src/docgen/OpenOfficeDoc.py: proper handling of center_text
